leaf/v/2.4-beta/intro/README.md
# 📚 Getting Started

## What is Leaf

Leaf is a PHP framework that helps you create clean, simple but powerful web apps and APIs quickly. Leaf introduces a cleaner and much simpler structure to the PHP language while maintaining it's flexibility.

With a simple structure and a shallow learning curve, it's an excellent way to rapidly build powerful and high performant web apps and APIs.

Simply install Leaf, and you're good to go.

## 📁 Installation

At the moment, Beta releases of Leaf can only be installed through composer.

Composer is a dependency manager for PHP, just like npm for javascript and ruby gems. Therefore, you need to have PHP installed on your system. If you don't already have composer installed, you can download it [here](https://getcomposer.org/)

After downloading composer, you can run this command to install leaf in your project folder.

```bash
composer require leafs/leaf ^2.4.0-beta
```

<!-- <div style="border: 1px solid rgba(10, 230, 150, 0.8); border-radius: 4px; background: rgba(10, 230, 150, 0.05); padding: 20px 30px; padding-bottom: 32px;">
	<div style="font-weight: bolder; font-size: 25px; margin-bottom: -18px !important;">Setup</div>
	<p style="color: rgb(5, 160, 70); font-size: 18px;">
		You can directly clone or download the git repo here.
	</p>
	<a href="https://github.com/leafsphp/leaf/" style="background: #202020; color: white; text-decoration: none; padding: 8px 15px; border-radius: 3px;">Download Repo</a>
</div> -->

<br>
<hr>

## Next steps

- [Configuring .htaccess](leaf/v/2.4-beta/intro/htaccess)
- [Your first leaf app](leaf/v/2.4-beta/intro/first)
- [Routing](leaf/v/2.4-beta/routing/)

<br>

Built with ❤ by <a href="https://mychi.netlify.app" style="font-size: 20px; color: #111;" target="_blank">Mychi Darko</a>
